bluec-tests/tests/invalid/types_fn_pointer/invalid_args1.c
int square(int x) {
    return x * x;
}

int main(void)
{
    int (*sq)(int) = square;

    sq();
    
    return 0;
}